2008-05-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-info-xref-re): Allow a column-range.
	Reported by Jose A. Ortega Ruiz <jao@google.com>.
	(inferior-haskell-error-regexp-alist): Use the extra column-end info
	if available.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indentation.el: Fix up general coding convention stuff.
	(haskell-indentation-mode): Use define-minor-mode.
	(turn-on-haskell-indentation, turn-off-haskell-indentation):
	Remove, fold into haskell-indentation-mode.

2008-02-28  Kristof Bastiaensen  <kristof@vleeuwen.org>

	* haskell-indentation.el: New file.

2008-02-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-region): New dummy function.
	(turn-on-haskell-indent): Use it to be more honest.

	* haskell-mode.el (literate-haskell-mode): Fix up mode line.
	Disable fill-comment-paragraph in Bird style.

	* inf-haskell.el (subst-char-in-string, make-temp-file):
	Add fallback definitions for XEmacs-21.4.

2008-02-28  Greg Steuck  <greg@nest.cx>  (tiny change)

	* inf-haskell.el (inferior-haskell-find-haddock): Jump to the symbol
	anchor within Haddock.

2008-02-18  Daniel Burrows  <dburrows@debian.org>  (tiny change)

	* haskell-indent.el (haskell-indent-next-symbol-safe): New fun.
	(haskell-indent-separate-valdef): Use it.

2008-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-cabal-of-buf): Fix typo.
	Reported by Bas van Dijk <v.dijk.bas@gmail.com>.

2008-02-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-wait-for-prompt): Add timeout arg.
	(inferior-haskell-find-definition): Expand file name in the right cwd.

2008-01-30  Greg Steuck  <greg@nest.cx>  (tiny change)

	* inf-haskell.el (inferior-haskell-cabal-of-buf)
	(inferior-haskell-module-alist-file): Adjust for XEmacs.

2008-01-17  Stefan Monnier  <monnier@iro.umontreal.ca>
